# ChangeLog for dev-php/PEAR-Text_Wiki_BBCode
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-Text_Wiki_BBCode/ChangeLog,v 1.12 2014/08/10 20:56:39 slyfox Exp $

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org>
  PEAR-Text_Wiki_BBCode-0.0.4-r1.ebuild:
  QA: drop trailing '.' from DESCRIPTION

*PEAR-Text_Wiki_BBCode-0.0.4-r1 (17 Jun 2010)

  17 Jun 2010; <mabi@gentoo.org> -PEAR-Text_Wiki_BBCode-0.0.4.ebuild,
  +PEAR-Text_Wiki_BBCode-0.0.4-r1.ebuild:
  eapi bump for php-5.3 (bug #298205)

  06 Dec 2007; Markus Ullmann <jokey@gentoo.org>
  PEAR-Text_Wiki_BBCode-0.0.4.ebuild:
  LICENSE fix from project overlay

  02 Dec 2007; Jakub Moc <jakub@gentoo.org>
  PEAR-Text_Wiki_BBCode-0.0.4.ebuild:
  Fix LICENSE, check for pcre support in PHP

  15 Aug 2007; Jakub Moc <jakub@gentoo.org> +metadata.xml,
  +PEAR-Text_Wiki_BBCode-0.0.4.ebuild:
  Version bump, Bug 158633

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  25 Nov 2006; Bryan Østergaard <kloeri@gentoo.org>
  PEAR-Text_Wiki_BBCode-0.0.3.ebuild:
  Add ~alpha + ~ia64 keywords, bug 134270.

  27 May 2006; Luca Longinotti <chtekk@gentoo.org> ChangeLog:
  Added to ~amd64. See bug #134270.

  25 May 2006; Michael Hanselmann <hansmi@gentoo.org>
  PEAR-Text_Wiki_BBCode-0.0.3.ebuild:
  Added to ~hppa, ~ppc64, ~sparc. See bug #134270.

  25 May 2006; <nixnut@gentoo.org> PEAR-Text_Wiki_BBCode-0.0.3.ebuild:
  Added ~ppc. bug #134270

  23 May 2006; Luca Longinotti <chtekk@gentoo.org>
  -PEAR-Text_Wiki_BBCode-0.0.2.ebuild:
  Spring cleanup.

*PEAR-Text_Wiki_BBCode-0.0.3 (28 Feb 2006)

  28 Feb 2006; Sebastian Bergmann <sebastian@gentoo.org>
  +PEAR-Text_Wiki_BBCode-0.0.3.ebuild:
  Version bump.

*PEAR-Text_Wiki_BBCode-0.0.2 (10 Dec 2005)

  10 Dec 2005; Sebastian Bergmann <sebastian@gentoo.org> +metadata.xml,
  +PEAR-Text_Wiki_BBCode-0.0.2.ebuild:
  Initial ebuild, closes bug 113842.