@@ -2,13 +2,17 @@
 Hash: SHA256
 
 DIST Text_Wiki_BBCode-0.0.4.tgz 16411 SHA256 21f075e9219e42909ac051e0efeff1c3bda9b9c42da05acdb9de4aec52367841 SHA512 00b456f9c100ad534f619f1584224ef36a54309d967442c1ac30aeee697eca0e13ab802d9ae9677aad8dc94bda61748451a0fac7a0bba6f63e1f02844e4c9dba WHIRLPOOL 34e33f3b01c08a3c2f6ab8753beee3fc5a13c710adf2678993713d13fa81ba2fee833d3c5c576c45d5ed9e5c346709f62577b692698343cf9df13dab758ad3e5
-EBUILD PEAR-Text_Wiki_BBCode-0.0.4-r1.ebuild 527 SHA256 c66a67f899533de29c4fa34f32c9ffde4fb9bcdec9b2b1313a7014531220020a SHA512 b5e096649c13b1de71c7e48f2ab13610aff2b5a9eb28bbbdb7d33c2356a7422e2d1bbc9fd270410f6fba9f4222faa9ab6a468d5b9251ae868cbb7151a8b2c5c0 WHIRLPOOL 0daaabf33e84ee46996ed859937b83cdeb4797ab12216fbc0c9b5d489cdbff08eb3d79afee313e201dd58b12a6dab00240ec37896fe0fe2e71520fd5fab095cc
-MISC ChangeLog 1970 SHA256 167b149c71f44d3baabace4e5784dc50cb22ac09cfcaf200bb1f2eb679fe3fa8 SHA512 8b33ff0f85ee0a6e35c7feec8062fbc2f7250fa6682f47e7fa9d03e290ab98d7149606653d8f413c064347521b001c501b74e3258bb3d02c5435218ad42d20db WHIRLPOOL ce18ac9c1a9d2c507e89352f6cb2a01df223558d11f1cd6a9a51b64e085611f4d0a736b03eba49abff6547b86c6d76b10cc9eb1014b8a9cb87e4012794344179
+EBUILD PEAR-Text_Wiki_BBCode-0.0.4-r2.ebuild 478 SHA256 80cf6744cf81f041ce4c82f6b3ca4cfcc1a87a55b26a5e5da6ce5eec511dc117 SHA512 6059807070e96736e442691af8ea437a00c67c21f08d423793f6432479130e7a32e9611821a8c0ac0cf6b946c4459e76da3ec68613422a2c333435e7c74c830f WHIRLPOOL 161be040e49ecbbc83fad1b5209b780905476a6844e9ad9ac12ba1622d7c46d44559c351f6488f2a688954a33c10603c2edd7ae5fb455c4b8107cdf249894d12
+MISC ChangeLog 2198 SHA256 38d8fd52c2255d391044df081d86fa90b91a8798711bc7821752ad7403274741 SHA512 fdc0388b5c257666572c57a4973f7d6c5b6023b232122c2c0b05ec228d4309e3191fe856dd218d01118a5a2ed4759c7b3063ecad8193ee4aeb4a6000eb507086 WHIRLPOOL 1cb93b32025790987164776cda85b85a19f3af05073d20b39c0e9ee1549249a8133ee2cd4385bfc0c162f25f8c95431e06c31b6129637e437877502a8b4b1707
 MISC metadata.xml 156 SHA256 f6d70434415ff7294f2a64e7870f32318c5fab9153fe63a58841b12d897da6ba SHA512 c15813e9ecae01488222d09140617eaf0e6e9b9b9d40412e1cda7838e64c8fb8c73c030dc90d723aea571acadddb76941c9a620fc4e554ba052ace1cc6b0ef79 WHIRLPOOL 1b1513674a388e3e95e09cfd70996bc98fc058ca0e0e7c5dc63e0b3389bedeb4dc16b55245b92a8ded7390cca0dc481e418f236a236ded9afcc2ef3845b25130
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlPn3IcACgkQcaHudmEf86pfZACfbn/7t51220EHwDxftRo8rcFX
-r64AnRiuwUT7rujhdmNIjZEaR5piXofU
-=vHPo
+iQEcBAEBCAAGBQJUMyssAAoJEE4V4vFnx44d+FwIAJRX5/AZervAiJHmBCo2PDhF
+uOET/McX7UfhDwgfrSzWJuihogfdXwzimVB+Z2fSf9r6XpeiXiAfpbjb/lA4WL8M
+WFFSo3XqG+hXeWREdQuheA/R2uHCdtugUyQxhx14KqpIb4Evdw3St7Zu6t21Q3pg
+BbmFhF1mXLN4Zg0EVeXClhFXb6fV/K1rSl7joXUypUc4Jalrs71bn6MJbKTvhJgp
+ruTPTfTgtZQQDDXzMgcnwcbqlAgawVG43v2vHHeguqOdNe0w3+fP60Gty/Pv1csu
+E/L0CWrLOuS+QdZtxx56xwm3kVYkWk40i7S5vB08Kx7uuRcCbud3rJpEHZsplS8=
+=q8q5
 -----END PGP SIGNATURE-----
