@@ -1,6 +1,13 @@
 # ChangeLog for dev-php/PEAR-Text_Wiki_BBCode
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-Text_Wiki_BBCode/ChangeLog,v 1.12 2014/08/10 20:56:39 slyfox Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-Text_Wiki_BBCode/ChangeLog,v 1.13 2014/10/06 23:52:07 grknight Exp $
+
+*PEAR-Text_Wiki_BBCode-0.0.4-r2 (06 Oct 2014)
+
+  06 Oct 2014; Brian Evans <grknight@gentoo.org>
+  +PEAR-Text_Wiki_BBCode-0.0.4-r2.ebuild,
+  -PEAR-Text_Wiki_BBCode-0.0.4-r1.ebuild:
+  Revbump for QA issues; EAPI bump; drop old
 
   10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org>
   PEAR-Text_Wiki_BBCode-0.0.4-r1.ebuild:
